# ministral-prefill-mask-ablation

./: .gitignore  README.md  STATUS.md  pyproject.toml
configs/: stage1_baseline_eval.yaml  stage2_ablation_eval.yaml  stage3_finetune_causal.yaml  stage3_finetune_prefill_bidir.yaml  stage4_postft_eval.yaml
data/: eval_freeform.json
docs/: EXPERIMENT_DESIGN.md  PREFILL_LM_PRIOR_ART.md  RESULTS_STAGE1_STAGE2.md  RESULTS_STAGE1_TO_STAGE4.md  VAST_AUTOPILOT_ALGORITHM.md  VAST_RUNBOOK.md
scripts/local/: estimate_vast_plan.py  vast_idle_hook.sh  vast_sleep_stage3.sh  wait_or_crash.sh
scripts/vast/: bootstrap.sh  remote_stage3_supervisor.sh  run_freeform_eval.sh  run_stage1_baseline_eval.sh  run_stage2_ablation_eval.sh  run_stage3_finetune.sh  run_stage4_postft_eval.sh  tail_logs.sh
src/prefill_ablation/: __init__.py  attention_ablation.py  eval_freeform.py  eval_mcq.py  finetune_sft.py  judge.py  utils.py
