[project]
name = "prefill-mask-ablation"
version = "0.1.0"
description = "Ministral 3B prefill causal-mask ablation experiments on Vast.ai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4.0",
  "transformers>=4.47.0",
  "datasets>=2.21.0,<3.0.0",
  "accelerate>=1.1.0",
  "safetensors>=0.5.0",
  "tqdm>=4.67.0",
  "pyyaml>=6.0.2",
  "numpy>=2.1.0",
  "sentencepiece>=0.2.0",
  "huggingface-hub>=1.0.0"
]

[project.optional-dependencies]
# Keep train extra for CLI compatibility, but avoid deepspeed on single-GPU runs.
train = []

[project.scripts]
prefill-eval = "prefill_ablation.eval_mcq:main"
prefill-finetune = "prefill_ablation.finetune_sft:main"
prefill-freeform-eval = "prefill_ablation.eval_freeform:main"
prefill-judge = "prefill_ablation.judge:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
